--- a/GeunEngine_Window/GeunEngine_Window.vcxproj.filters
+++ b/GeunEngine_Window/GeunEngine_Window.vcxproj.filters
@@ -1,2 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" />
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <ItemGroup>
+    <ClInclude Include="geunPlayScene.h" />
+    <ClInclude Include="geunLoadScenes.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="geunPlayScene.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Scenes">
+      <UniqueIdentifier>{17454e0e-542e-4604-8c6b-1306ce13b0df}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+</Project>
