--- a/GeunEngine_Window/GeunEngine_Window.vcxproj.filters
+++ b/GeunEngine_Window/GeunEngine_Window.vcxproj.filters
@@ -49,4 +49,8 @@
       <Filter>Scripts</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram11.cd" />
+  </ItemGroup>
 </Project>
