--- a/GeunEngine_Window/GeunEngine_Window.vcxproj
+++ b/GeunEngine_Window/GeunEngine_Window.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="geunCat.h" />
+    <ClInclude Include="geunCatScript.h" />
     <ClInclude Include="geunEndScene.h" />
     <ClInclude Include="geunLoadResources.h" />
     <ClInclude Include="geunLoadScenes.h" />
@@ -28,6 +30,8 @@
     <ClInclude Include="geunTitleScene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="geunCat.cpp" />
+    <ClCompile Include="geunCatScript.cpp" />
     <ClCompile Include="geunEndScene.cpp" />
     <ClCompile Include="geunPlayer.cpp" />
     <ClCompile Include="geunPlayerScript.cpp" />
